# invoice-generator

./: .gitignore  README.md  invoice.py  pyproject.toml  sample-config.yaml  sample-sheet.xlsx  time_tracker_summarize.py
templates/: 1.css  2.css  template.html
